--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -1,7 +1,7 @@
 \chapter{Binocular Vision and Stereopsis}
 \label{chap:BinocularVision}
 
-\textit{Binocular vision} is a term used for the visual system of animals with two eyes \cite{how95}, and therefore, applies to the human visual system as well. 
+\textit{Binocular vision} is a term used for the visual system of animals with two eyes \cite{how95} and, therefore, applies to the human visual system as well. 
 Possessing binocular vision not only leads to a better perception of depth
 of the surrounding environment, but also helps to better perform many visual tasks such as reading, object detection, interaction with surrounding objects such as grabbing and other manipulative 
 tasks \cite{how95}. The most significant advantage of possessing binocular vision is its influence on how the 3D environment, that is, the 
