--- a/ThesisReport/Conclusion.tex
+++ b/ThesisReport/Conclusion.tex
@@ -36,7 +36,7 @@ As seen in the experiments, we could not certainly determine the importance of t
 of the stereo algorithms. We believe that a solid conclusion can be made by evaluating more stereo matching solutions
 within our model and observing the results in the masked regions and the whole image.
 
-Another interesting aspect of improvement is exploring the effect of other factors that can affect the effectiveness and usability of the outdoor AR system, and therefore, 
+Another interesting aspect of improvement is exploring the effect of other factors that can affect the effectiveness and usability of the outdoor AR system and, therefore, 
 are important to be considered in the evaluation of the method that is used to obtain the depth map of the surrounding environment. To name some of these factors we can refer to
 the resolution of the display devices in the AR system, the effect of contrast and brightness, and other relevant factors. A more complete list of these factors can be
 found in the survey on the perceptual issues in augmented reality by Kruijff et al. \cite{kru10}.
