--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -60,7 +60,7 @@ refining the areas near the depth edges in an image are more important in an AR 
 Salient edges caused by depth discontinuities, 
 which can also represent the object boundaries and occlusion, are one of the 
 most important depth cues that helps the observer to better perceive the depth of different objects in the scene. In other words, the areas near the edges corresponding to depth discontinuities
-in a scene are more important to the human visual system for perception of depth in an AR application and therefore, the disparity 
+in a scene are more important to the human visual system for perception of depth in an AR application and, therefore, the disparity 
 errors in these regions can be detected easier by the HVS. Therefore, we argue that in our model, which has the property of masking and evaluating the results for
 these particular regions,
 the evaluation results can be of great value to an outdoor AR application.
@@ -69,7 +69,7 @@ the evaluation results can be of great value to an outdoor AR application.
 real-time AR applications.}
 Other evaluation models, the Kitti and Middlebury benchmarks, do not evaluate and report on the efficiency of the algorithms
 with respect to their execution time. On the other hand, our system is capable of examining and evaluating an algorithm 
-based on its execution time, and therefore, can report on its efficiency for real-time AR applications.
+based on its execution time and, therefore, can report on its efficiency for real-time AR applications.
 
 \item \textbf{Hypothesis 4:} \emph{The trade-off between the accuracy and the running time of the stereo algorithms can be effectively evaluated 
 in the framework of an outdoor AR application through our system.} 
@@ -349,8 +349,8 @@ within our model.
 In either case, we argue that, due to the importance of occlusion and areas near depth discontinuities to the HVS in AR applications, 
 it is reasonable to focus more on the depth edges and their surroundings when designing or employing a stereo matching technique for an AR application.
 
-\subsection{The Average Outlier}
-In this experiment the average number of outliers were measured for both algorithms. 
+\subsection{Average Outliers}
+In this experiment the average outliers were measured for both algorithms. 
 The values for both validity criteria mentioned in chapter \ref{chap:System}, valid pixels in the ground truth and generated disparity, 
 are presented in Tables \ref{tab:outlmsk} and \ref{tab:outlfull} for each age group. For simplicity, we have labelled the valid pixels
 in the ground truth and the generated disparity with \textbf{vG} and \textbf{vD}, respectively.
@@ -359,11 +359,11 @@ Figure \ref{fig:outlbar} also represents a chart of all the results for one of t
 %{\footnotesize
 \begin{minipage}{0.8\linewidth}
 \begin{center}
-\captionof{table}{The average outliers for the masked regions}
+\captionof{table}{Average outliers for the masked regions}
 \label{tab:outlmsk}
 \begin{tabular}{ |c|c|c|c| }
 \hline
-Algorithm & Age & Average Outlier(vG) & Average Outlier(vD) \\ \hline
+Algorithm & Age & Avg\_Outliers(vG) & Avg\_Outliers(vD) \\ \hline
 \multirow{4}{*}{SGBM} & 17-29 & 0.12 & 0.16 \\
 & 30-49 & 0.11 & 0.15 \\
 & 50-69 & 0.09 & 0.12 \\
@@ -379,11 +379,11 @@ Algorithm & Age & Average Outlier(vG) & Average Outlier(vD) \\ \hline
 
 \begin{minipage}{0.8\linewidth}
 \begin{center}
-\captionof{table}{The average outliers for the whole image}
+\captionof{table}{Average outliers for the whole image}
 \label{tab:outlfull}
 \begin{tabular}{ |c|c|c|c| }
 \hline
-Algorithm & Age & Average Outlier(vG) & Average Outlier(vD)  \\ \hline
+Algorithm & Age & Avg\_Outliers(vG) & Avg\_Outliers(vD)  \\ \hline
 \multirow{4}{*}{SGBM} & 17-29 & 0.11 & 0.14 \\
 & 30-49 & 0.10 & 0.12 \\
 & 50-69 & 0.08 & 0.09 \\
@@ -429,24 +429,24 @@ on the scene, compared to application scenarios where obtaining an accurate, den
 %relevant metrics. 
 
 We should note that the reason the number of outliers for the valid pixels in the generated disparity is more than the outliers for the valid pixels
-in the ground truth is that in our implemention, the counter for the number of pixels in the ground truth image 
+in the ground truth is that in our implementation, the counter for the number of pixels in the ground truth image 
 is incremented whenever a disparity pixel in the ground truth is labelled as valid, regardless of other conditions in the process; 
 however, the counter for the number of pixels in the generated disparity
 is only incremented whenever the disparity value is valid and the amount of disparity error is less than the specified pixel threshold in the evaluation process, thus resulting
-in a smaller denominator of the fraction in the estimation of the average outliers for the criteria of valid pixels in the generated disparity map, and therefore, a larger 
+in a smaller denominator of the fraction in the estimation of the average outliers for the criteria of valid pixels in the generated disparity map and, therefore, a larger 
 average value in the end.
 
-\subsection{The Average Disparity Error}
+\subsection{Average Disparity Error}
 The average disparity error have also been estimated in the evaluation process for both pixel validity criteria. However, the resulting values
-were similar for both cases, and therefore, only one value is reported in the following table for this metric.
+were similar for both cases and, therefore, only one value is reported in the following table for this metric.
 
 \begin{minipage}{0.8\linewidth}
 \begin{center}
-\captionof{table}{The average disparity error}
+\captionof{table}{Average disparity error}
 \label{tab:avgerr}
 \begin{tabular}{ |c|c|c| }
 \hline
-Algorithm & Region & error \\ \hline
+Algorithm & Region & Avg\_DispErr \\ \hline
 \multirow{2}{*}{SGBM} & Full & 6.58 \\ \cline{2-3}
 & Masked & 7.81 \\ \hline
 \multirow{2}{*}{ADCensus} & Full & 4.49 \\ \cline{2-3}
@@ -525,7 +525,7 @@ As can be seen in the plots, the evaluation results in our specific criteria
 are not significantly different from the results of the algorithm when LR check and refinement were triggered
 and only a few average values have slightly changed. We have marked a few of these values with a blue circle in Figures \ref{fig:adcmnoLR} and \ref{fig:adcfnoLR}.
 
-We also estimated the average execution time, the average disparity error, and the average number of outliers in this experiment. The results for 
+We also estimated the average execution time, the average disparity error, and the average outliers in this experiment. The results for 
 the average error and outliers are shown in the tables below.
 
 \begin{minipage}{0.8\linewidth}
@@ -534,7 +534,7 @@ the average error and outliers are shown in the tables below.
 \label{tab:adcerrNref}
 \begin{tabular}{|c|c|}
 \hline
-Region & Average Disparity Error \\ \hline
+Region & Avg\_DispErr \\ \hline
 Masked & 5.59 \\  \hline
 Full & 5.29 \\ \hline
 \end{tabular}
@@ -547,7 +547,7 @@ Full & 5.29 \\ \hline
 \label{tab:adcoutlNref}
 \begin{tabular}{ |c|c|c|c| }
 \hline
-Region & Age &  Average Outlier(vG) & Average Outlier(vD)  \\ \hline
+Region & Age &  Avg\_Outliers(vG) & Avg\_Outliers(vD)  \\ \hline
 \multirow{4}{*}{Masked} & 17-29 & 0.23 & 0.33 \\
 & 30-49 & 0.22 & 0.31 \\
 & 50-69 & 0.18 & 0.27 \\
@@ -620,5 +620,85 @@ through our evaluation system. The conventional evaluation models lack this prop
 
 \end{itemize}
 
+\section{Detectability of Depth in AR}
+According to different studies \cite{dras96, kru10,azuma01}, some other factors such as issues associated with the environment, display device, and capturing device
+can also affect the perception of depth in the visual system. As a result, the ability to detect the difference in depth 
+does not merely depend on how accurate the stereo correspondence algorithm can estimate the depth values and detect the steps in depth.
+In order to investigate the validity of this statement, we conducted another experiment. In this experiment we defined some stereoacuity thresholds,
+or better to phrase as the detectable depth difference
+in terms of stereoacuity. In order to find the minimum threshold to start with, we attempted to find the 
+minimum disparity change in the grount truth disparity images. To this end, we move through horizontal scanlines in each image and 
+compute the difference between the values of consecutive pixels, which is, in fact, an indicator of the detectability of the difference in depth. 
+After finding the minimum value in each image, a global minimum is sought between all the computed values from different images.
+The value we found for image size of $1242\times375$ and the focal length of $721$ millimeters was $0.0022$ arcmins.
+After finding this minimum and defining our thresholds, we apply a nearly similar operation on the disparity results from each of the sample algorithms.
+In this process, while moving through each image, for those pixels whose generated disparity is close to the ground truth disparity, within a pre-defined pixel threshold, 
+we estimate their depth difference from their following pixel
+in the ground truth and compare the value to each of the specified thresholds; if this value is less than a threshold, then we check to see whether
+the stereo algorithm has also detected different values for the corresponding pixels. 
+In case of detection, we increment a counter corresponding to each threshold.
+This process is repeated for different images and, finally, the average of the detected changes is estimated for each specified threshold.
 
+\begin{alltt}
+\textbf{ADP}; START
+      define StAc\_thresh;
+      for all pixels p in the image; do
+         if (\( |disp\sb{gt}-disp\sb{gen}|<pix\_thresh\));
+            \(pix\_count++\);
+            \(diff = |disp\sb{gen\sb{i}}-disp\sb{gen\sb{i+1}}|\);
+            \(depth\sb{gt\sb{i}} = \frac{focal\_length \times baseline}{disp\sb{gen\sb{i}}}\);
+            \(depth\sb{gt\sb{i+1}} = \frac{focal\_length \times baseline}{disp\sb{gen\sb{i+1}}}\);
+            \(depthDiff = |depth\sb{gt\sb{i}}-depth\sb{gt\sb{i+1}}|\);
+            \(stAc\_detected = \frac{pupil\_distance*depthDiff}{depth\sb{gt\sb{i}}\sp{2}}\);
+            for each threshold \textit{thr} in StAc\_thresh; do
+               if (\(stAc\_detected<thr\))
+                  if (\(diff>0\))
+                     \(detected[thr]++\);
+                  fi
+               fi
+            end for
+      end for
+      for each threshold \textit{thr} in StAc\_thresh; do
+         \(Avg\_detected[thr] = detected[thr]/pix\_count\);
+      end for
+\textbf{ADP}; END
+\end{alltt}
+The results for both algorithms are shown in Figure \ref{fig:algthresh}.
 
+\begin{figure}[H]
+\centering
+\includegraphics{algthreshBoth}
+\caption{Average detected changes for different stereoacuity thresholds}
+\label{fig:algthresh}
+\end{figure} 
+
+As can be seen in these plots, for both algorithms, the average detected changes in disparity differences starts to converge at the value of approximately $0.4$ arcmins.
+We also observe that for the values below this threshold the average detected changes are much lower and for some values, such as the minimum detectable threshold in ground truth,
+both algorithms are not capable of detecting any change. 
+This implies that, regardless of the accuracy resolution of the algorithms, which is $1/8$th of a pixel for SGBM and $1/16$th of a pixel for ADCensus and approximately equal to
+$0.6$ arcmins and $0.3$ arcmins, respectively, for Kitti images based on the camera parameters and the geometrical relation presented in Figure \ref{fig:camResolution} and 
+Equation \ref{eq:algResolution}, some changes in 
+depth in the real world are still not be detected by the algorithm. This effect might be related to the sensor resolution, that is, the resolution of the capturing device or the effect
+of noise. Therefore, in order to achieve better detectability of depth changes by the algorithms, that is, to obtain a lower threshold
+which is closer to the actual resolution of the implemented algorithm, using higher resolution devices is also essential.
+However, our previous experimental results show that despite various types of error caused by the capturing device, noise, or the discretization limit of the stereo correspondence 
+algorithm in the estimation of disparity values, in many cases depending on the distance of the object from the observer,  
+the error in the results will not be perceptible to the HVS in an outdoor AR
+application.
+
+\begin{figure}[H]
+\centering
+\includegraphics{camRes}
+\caption{Resolution of image in angular disparity}
+\label{fig:camResolution}
+\end{figure}
+\noindent
+Where, $w$ is the image width and $f$ is the focal length of the capturing device.
+For the imge size of $1242\times375$ and focal length of $721$, and based on the resolution of SGBM and ADCensus in the estimation of the disparity values, 
+the detectable disparity difference in terms of stereoacuity is as follows:
+
+\begin{align}
+\label{eq:algResolution}
+SGBM: \theta &= \arctan (\frac{\frac{1}{8}}{721}) = 0.0099 degrees \times 60 \frac{arcmins}{dgrees} = 0.59 arcmins \\
+ADCensus: \theta &= \arctan (\frac{\frac{1}{16}}{721}) = 0.0049 degrees \times 60 \frac{arcmins}{degrees}= 0.29 arcmins
+\end{align}
