system chapter revised based on Oscar's first review

--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -354,7 +354,7 @@ In this experiment the average outliers were measured for both algorithms.
 The values for both validity criteria mentioned in chapter \ref{chap:System}, valid pixels in the ground truth and generated disparity, 
 are presented in Tables \ref{tab:outlmsk} and \ref{tab:outlfull} for each age group. For simplicity, we have labelled the valid pixels
 in the ground truth and the generated disparity with \textbf{vG} and \textbf{vD}, respectively.
-Figure \ref{fig:outlbar} also represents a chart of all the results for one of these validity criteria, when the grount truth disparity is valid.
+Figure \ref{fig:outlbar} also represents a chart of all the results for one of these validity criteria, when the ground truth disparity is valid.
 
 %{\footnotesize
 \begin{minipage}{0.8\linewidth}
@@ -694,11 +694,11 @@ application.
 \end{figure}
 \noindent
 Where, $w$ is the image width and $f$ is the focal length of the capturing device.
-For the imge size of $1242\times375$ and focal length of $721$, and based on the resolution of SGBM and ADCensus in the estimation of the disparity values, 
+For the image size of $1242\times375$ and focal length of $721$, and based on the resolution of SGBM and ADCensus in the estimation of the disparity values, 
 the detectable disparity difference in terms of stereoacuity is as follows:
 
 \begin{align}
 \label{eq:algResolution}
-SGBM: \theta &= \arctan (\frac{\frac{1}{8}}{721}) = 0.0099 degrees \times 60 \frac{arcmins}{dgrees} = 0.59 arcmins \\
+SGBM: \theta &= \arctan (\frac{\frac{1}{8}}{721}) = 0.0099 degrees \times 60 \frac{arcmins}{degrees} = 0.59 arcmins \\
 ADCensus: \theta &= \arctan (\frac{\frac{1}{16}}{721}) = 0.0049 degrees \times 60 \frac{arcmins}{degrees}= 0.29 arcmins
 \end{align}
